Make vertical resizing of framesets work in standards mode.  Bug 376981, r+sr=dbaron